--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,23 @@
         android:theme="@style/Theme.AndoridProject1"
         tools:targetApi="31">
         <activity
+            android:name=".Game2Activity"
+            android:exported="false" />
+        <activity
             android:name=".MenuActivity"
-            android:label="@string/app_name"
             android:exported="true"
-            android:theme="@style/Theme.AndoridProject1"
-            >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AndoridProject1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
+        </activity>
         <activity
             android:name=".Game1Activity"
             android:exported="true"
-            android:theme="@style/Theme.AndoridProject1">
-
-        </activity>
+            android:theme="@style/Theme.AndoridProject1"></activity>
     </application>
 
 </manifest>
